# flakewarden

./: .gitignore  ARCHITECTURE.md  README.md  SETUP.md  deck.html  pyproject.toml  requirements.txt
agents/: README.md  classifier_agent.json  classifier_prompt.txt  healing_agent.json
corpus/: README.md  failures.jsonl  generate_corpus.py
docs/: coding-agents.md  demo-script.md  deploy-runbook.md  limitations.md  presentation-outline.md  prior-art.md
eval/: harness.py  negative_control.py  report.md
flakewarden/: __init__.py  classifier.py  cli.py  features.py  orchestration.py  schema.py  scorer.py
flakewarden-maestro/: entry-points.json  flakewarden-maestro.bpmn  operate.json  package-descriptor.json  project.uiproj
maestro/: README.md  flakewarden.process.json
preview/: README.md
seeded_suite/: README.md  run_history.py  seeded_suite.py
tests/: test_orchestration.py  test_robustness.py  test_scorer.py
